fix dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,10 @@ body {
     margin: 0;
 }
 
+body.dark {
+    background-color: black;
+}
+
 header {
     text-align: center;
     width: 100%;
@@ -125,6 +129,10 @@ header > h2 {
     border-bottom: 1px solid white;
 }
 
+body.dark .timer-label {
+    border-bottom-color: black;
+}
+
 .row:last-of-type .timer-label {
     border-bottom: 0;
 }
@@ -185,6 +193,14 @@ div:not(.start-countdown):not(.end-countdown) > .timer-label.note::after {
     padding: 0;
 }
 
+body.dark .progress {
+    border-bottom-color: black;
+}
+
+body.dark .end-countdown .progress {
+    background-color: black;
+}
+
 .row:last-of-type .progress {
     border-bottom: none;
 }
@@ -201,6 +217,10 @@ div:not(.start-countdown):not(.end-countdown) > .timer-label.note::after {
     color: black;
 }
 
+body.dark .end-countdown .progress > div {
+    color: white;
+}
+
 .progress > div {
     color: var(--color);
     width: calc(100vw - var(--timer-width));
@@ -213,6 +233,11 @@ div:not(.start-countdown):not(.end-countdown) > .timer-label.note::after {
     border-left: 1px solid white;
     border-bottom: 1px solid white;
     font-family: var(--monospace-font);
+}
+
+body.dark .countdown {
+    border-left-color: black;
+    border-bottom-color: black;
 }
 
 .end-countdown .countdown {
